--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "asciiart-logo": "^0.2.6",
+    "console.table": "^0.10.0",
+    "mysql2": "^2.2.5",
+    "inquirer": "8.2.4"
   }
 }
