--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "21-ins_prepared-statements",
+  "name": "sql-employee-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
